# photo-rn

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: constants.hpp  fileinfo.cpp  fileinfo.hpp  main.cpp
src/cli/: cli_module.cpp  cli_module.hpp
src/generator/: generator.cpp  generator.hpp  n_generator.cpp  n_generator.hpp
src/generator/tokenizer/: token.hpp  tokenizer.cpp  tokenizer.hpp
src/reader/: reader.cpp  reader.hpp
tests/: CMakeLists.txt  test_tokenizer.cpp
